--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     { "src": "image/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" },
+    {
+      "src": "/404",
+      "dest": "/404.html"
+    }
   ]
 }
